--- a/index.html
+++ b/index.html
@@ -93,5 +93,44 @@
         </div>
       </section>
     </main>
+
+    <footer>
+      <div class="info">
+        <h4>Craft by Ohiomata BN</h4>
+        <h5>Contact Ohiomata BN</h5>
+        <p>
+          <a href="https://web.facebook.com/Ohiomatabn/"
+            ><i class="fa-brands fa-facebook-f"></i>Ohiomata BN</a
+          >
+        </p>
+        <br />
+        <p>
+          <a href="https://x.com/ohiomatabn"
+            ><i class="fab fa-x-twitter"></i>ohiomatabn</a
+          >
+        </p>
+        <br />
+        <p>
+          <a href="https://github.com/Ohiomatabn"
+            ><i class="fa-brands fa-github"></i>Ohiomatabn</a
+          >
+        </p>
+        <br />
+        <p>
+          <a href="tel:+234-916-109-8199"
+            ><i class="fab fa-dribbble"></i>+234 916 109 8199</a
+          >
+        </p>
+        <br />
+        <p>
+          <a href="maito:benjaminohiomatanathaniel@gmail.com">
+            <i class="fa-regular fa-envelope fa-3x"></i
+            >benjaminohiomatana<br />thaniel@gmail.com</a
+          >
+        </p>
+      </div>
+      <hr />
+      <p class="copyright">Copyright&copy; Ohiomata BN 2024</p>
+    </footer>
   </body>
 </html>
