add fontawesome cdn to the head section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="all.min.css" />
+    <link rel="stylesheet" href="brands.min.css" />
+    <link rel="stylesheet" href="fontawesome.min.css" />
     <link rel="stylesheet" href="main.css" />
     <title>Great Shoe Inc.</title>
   </head>
